--- a/src/app/components/picture-detail/picture-detail.component.html
+++ b/src/app/components/picture-detail/picture-detail.component.html
@@ -58,7 +58,7 @@
 
             <ng-container *ngTemplateOutlet="templateType"></ng-container>
 
-            <button type="button" class="btn btn-default btn-lg btn-block waves-light" mdbRippleRadius (click)="addToShoppingCart(templateType)">
+            <button type="button" class="btn btn-default btn-lg btn-block waves-light" mdbRippleRadius (click)="addToShoppingCart()">
               <i class="fa fa-shopping-cart mr-1"></i> {{ 'BUTTONS.ADD_TO_SHOPPING_CART' | translate }}</button>
           </div>
         </div>
