refactored local storage

--- a/src/app/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/components/navigation-bar/navigation-bar.component.html
@@ -60,7 +60,7 @@
 
         <li class="nav-item" *ngIf="!user?.roles.admin && !user?.roles.photographer">
           <a class="nav-link waves-effect waves-light" routerLink="/cart">
-            <i class="fa fa-shopping-cart"></i>{{ cartItems }}
+            <i class="fa fa-shopping-cart"></i>
           </a>
         </li>
       </ul>
