--- a/src/app/pages/photographer-page/photographer-page.component.scss
+++ b/src/app/pages/photographer-page/photographer-page.component.scss
@@ -9,10 +9,26 @@
   padding-bottom: 10px;
 }
 
+.tab-hdg{
+  font-weight: bold;
+}
+.fa-star{
+  border:orange;
+}
+
 .grey-gradient {
   // background: linear-gradient(40deg, #e8eaf6, #fafafa);
   // background: linear-gradient(40deg, #b2dfdb, #00796b); // chiara türkis
   // background: linear-gradient(40deg, #fff176, #ffa726); // yellow-orange
+}
+
+hr{
+  color: #3f51b5;
+}
+
+td{
+  border: none;
+ 
 }
 
 #centered {
