--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -60,7 +60,7 @@
     <!-- Buttons to previous or next step -->
     <div class="row justify-content-end">
       <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
-      <button type="button" class="btn btn-primary waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
+      <button type="button" class="btn btn-primary waves-light col-sm-3" routerLink="/checkout" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
     </div>
     <!-- END buttons -->
   </div>
