--- a/src/app/pages/checkout-page/checkout-page.component.html
+++ b/src/app/pages/checkout-page/checkout-page.component.html
@@ -156,9 +156,9 @@
                   <i class="fa fa-check" aria-hidden="true"></i>
                 </td>
                 <td>{{ item.info.width }}x{{ item.info.height }}</td>
-                <td>{{ item.price }}</td>
+                <td>{{ item.price | number:'0.2' }}€</td>
                 <td class="background-white">
-                  <i class="fa fa-lg fa-trash clickable" aria-hidden="true"></i>
+                  <i class="fa fa-lg fa-trash clickable" aria-hidden="true" (click)="removeItem(i)"></i>
                 </td>
               </tr>
               <tr class="table background-white">
@@ -183,7 +183,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td>20€</td>
+                <td>{{ paymentAmount | number:'0.2' }}€</td>
               </tr>
             </tbody>
           </table>
