--- a/src/app/pages/event-search-page/event-search-page.component.html
+++ b/src/app/pages/event-search-page/event-search-page.component.html
@@ -1,5 +1,37 @@
-<div class="row mt-5 pt-5">
-  <div class="col text-center">
-    <h1>Event Search Page</h1>
+<div>
+  <div class="row mt-5 pt-5 justify-content-md-center input-row">
+    <div class="col col-lg-6">
+      <div class="md-form">
+        <input mdbActive type="text" class="form-control" (keyup)="onKey($event)">
+        <label class="active">{{ 'TEXTS.SEARCH_EVENT' | translate }}</label>
+      </div>
+      <p *ngIf="searchedEvents.length === 0" class="info">{{ 'TEXTS.NO_EVENTS_FOUND' | translate }}</p>
+    </div>
+  </div>
+  <div *ngIf="searchedEvents">
+    <div class="row">
+      <div *ngFor="let event of searchedEvents" class="col-12 col-md-4">
+        <div class="card card-cascade wider">
+
+          <div class="view gradient-card-header peach-gradient">
+            <h2 class="h2-responsive mb-2">
+              <i *ngIf="!event?.public" class="fa fa-lock"></i> {{event.name}}</h2>
+            <p>
+              <i class="fa fa-calendar"></i>&nbsp;{{event.date}}</p>
+
+          </div>
+          <div class="card-body text-center">
+
+            <p class="card-text mr-2 ml-2">{{event.description}}</p>
+
+            <a [routerLink]="[ '/event', event.id]" class="orange-text mt-1 d-flex flex-row-reverse">
+              <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
+                <i class="fa fa-chevron-right"></i>
+              </h5>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
