--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -66,36 +66,39 @@
 
 <ng-template #imgBigOverview>
   <div class="row">
-    <div class="card card-outline-primary z-depth-1 col-4" *ngFor="let image of images; let i = index">
-      <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image, i)">
-      <div class="card-body">
-        <p>{{image.name}}</p>
-        <table>
-          <tr>
-            <td>
-              <a class="icon-button" id="button_picture{{i}}_mark" [ngStyle]="image.selected && { 'color': '#3f51b5' }" (click)="images[i].selected = !images[i].selected">
-                <i class="fa fa-check fa-2x" aria-hidden="true">&nbsp;</i>
-              </a>
-            </td>
+    <div *ngFor="let image of images; let i = index" class="col-4">
+      <div class="card card-outline-primary z-depth-1">
+        <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image, i)">
+        <div class="card-body">
+          <p>{{image.name}}</p>
+          <table>
+            <tr>
+              <td>
+                <a class="icon-button" id="button_picture{{i}}_mark" [ngStyle]="image.selected && { 'color': '#3f51b5' }" (click)="images[i].selected = !images[i].selected">
+                  <i class="fa fa-check fa-2x" aria-hidden="true">&nbsp;</i>
+                </a>
+              </td>
 
-            <td>
-              <a class="icon-button" id="button_picture{{i}}_like" style="color: #3f51b5" (click)="rateImage(image)">
-                &nbsp;
-                <i class="fa fa-heart fa-2x" aria-hidden="true">&nbsp;{{ image.ratings }}</i>
-              </a>
-            </td>
+              <td>
+                <a class="icon-button" id="button_picture{{i}}_like" style="color: #3f51b5" (click)="rateImage(image)">
+                  &nbsp;
+                  <i class="fa fa-heart fa-2x" aria-hidden="true">&nbsp;{{ image.ratings }}</i>
+                </a>
+              </td>
 
-            <td>
-              <a class="icon-button" id="button_picture{{i}}_report" style="color: #ff4848" (click)="reportImage(image)">
-                &nbsp;
-                <i class="fa fa-exclamation-triangle fa-2x" aria-hidden="true">&nbsp;</i>
-              </a>
-            </td>
-          </tr>
-        </table>
+              <td>
+                <a class="icon-button" id="button_picture{{i}}_report" style="color: #ff4848" (click)="reportImage(image)">
+                  &nbsp;
+                  <i class="fa fa-exclamation-triangle fa-2x" aria-hidden="true">&nbsp;</i>
+                </a>
+              </td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
   </div>
+
 </ng-template>
 
 <ng-template #imgSmalOverview>
