--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,21 @@
 <footer class="page-footer center-on-small-only pt-0 mt-5 fixed-bottom indigo">
 
   <div class="footer-copyright">
-    <div class="container-fluid">Made with
-      <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
-      © {{ year }} Copyright:
-      <a routerLink="/"> eventpicking.de </a>
-    </div>
-  </div>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div clas="col-8 text-center">
+          Made with
+          <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
+          © {{ year }} Copyright:
+          <a routerLink="/"> eventpicking.de </a>
+        </div><!--col-->
 
+        <div class="col-2">
+          <a routerLink="/imprint"> Impressum </a>
+          <a> | </a>
+          <a routerLink="/data-protection"> Datenschutz </a>
+        </div><!--col-->
+      </div><!--row-->
+    </div><!--container-->
+  </div><!--copyright-->
 </footer>
