CSS/Typing finished -- some new functions (routerLinks in Footer/ShoppingCard/Checkout)

--- a/src/app/components/event-photographer/event-photographer.component.html
+++ b/src/app/components/event-photographer/event-photographer.component.html
@@ -23,7 +23,7 @@
                 <td>{{ image.info.width }}x{{ image.info.height }}</td>
                 <td>{{ (image.info.size) | bytes }}</td>
                 <td>
-                  <a class="fa fa-trash-o" aria-hidden="true" (click)="deleteImage(image)"></a>
+                  <a class="fa fa-trash-o" style="color: #e91e63" aria-hidden="true" (click)="deleteImage(image)"></a>
                 </td>
               </tr>
             </tbody>
