--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,12 @@
       <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
       © {{ year }} Copyright:
       <a routerLink="/"> eventpicking.de </a>
+      &nbsp;|&nbsp;
+      <a routerLink="/imprint">{{ 'LABELS.IMPRINT' | translate }}</a>
+      &nbsp;|&nbsp;
+      <a routerLink="/data-protection">{{ 'LABELS.DATA_PROTECTION' | translate }}</a>
+      &nbsp;|&nbsp;
+      <a routerLink="/gtc">{{ 'LABELS.GTC' | translate }}</a>
     </div>
   </div>
 
