--- a/src/app/pages/event-search-page/event-search-page.component.scss
+++ b/src/app/pages/event-search-page/event-search-page.component.scss
@@ -10,3 +10,7 @@
 .col-12 {
   padding-bottom: 30px;
 }
+
+.indigo-gradient {
+  background: linear-gradient(80deg, #9dafff, rgb(104, 129, 253));
+}
