--- a/src/app/pages/gtcpage/gtcpage.component.html
+++ b/src/app/pages/gtcpage/gtcpage.component.html
@@ -9,20 +9,28 @@
           <h1>Allgemeine Geschäftsbedingungen</h1>
 
           <br />
-          <h2>Vertragspartner</h2>Auf Grundlage dieser Allgemeinen Geschäftsbedingungen (AGB) kommt zwischen dem Kunden und
-          <br />picpcieventpicking
-          <br />Vertreten durch Max Mustermann
-          <br />Adresse: Oberhofenstraße 33 32432 Stuggi
-          <br />Tel: 0152020202020
-          <br />E-Mail-Adresse: qdwqdqw@eventpicking.de
+          <h4>Vertragspartner</h4>Auf Grundlage dieser Allgemeinen Geschäftsbedingungen (AGB) kommt zwischen dem Kunden und EventPicKing,
+          nachfolgend Anbieter genannt, der Vertrag zustande.
+          <br>
+          <br>EventPicKing wird vertreten durch
+          <br>Daniel Sogl
+          <br />Adresse: Wernerstra&szlig;e 80, 71636 Ludwigsburg
+          <br />Tel: 01775891978
+          <br />E-Mail-Adresse: mytechde@outlook.com
           <br />
-          <br />Handelsregister: handelregister?
-          <br />Handelsregisternummer: handeregiksternummer?
-          <br />Umsatzsteuer-Identifikationsnummer: usatttsueridendunummer?
-          <br /> , nachfolgend Anbieter genannt, der Vertrag zustande.
-          <h2>Vertragsgegenstand</h2>Durch diesen Vertrag wird der Verkauf von Dienstleistungen über den Online-Shop des Anbieters
+          <br />Handelsregister: Amtsgericht-Stuttgart?
+          <br />Handelsregisternummer: B-170033
+          <br />Umsatzsteuer-Identifikationsnummer: DE270638255
+          <br>
+          <br>
+          <br>
+          <br>
+          <h4>Vertragsgegenstand</h4>Durch diesen Vertrag wird der Verkauf von Dienstleistungen über den Online-Shop des Anbieters
           geregelt. Wegen der Details des jeweiligen Angebotes wird auf die Produktbeschreibung der Angebotsseite verwiesen.
-          <h2>Vertragsschluss</h2>Der Vertrag kommt ausschließlich im elektronischen Geschäftsverkehr über das Shop-System zustande.
+          <br>
+          <br>
+          <br>
+          <h4>Vertragsschluss</h4>Der Vertrag kommt ausschließlich im elektronischen Geschäftsverkehr über das Shop-System zustande.
           Dabei stellen die dargestellten Angebote eine unverbindliche Aufforderung zur Abgabe eines Angebots durch die Kundenbestellung
           dar, das der Anbieter dann annehmen kann. Der Bestellvorgang zum Vertragsschluss umfasst im Shop-System folgende
           Schritte:
@@ -35,17 +43,26 @@
           <li>Betätigen des Buttons 'kostenpflichtig bestellen'</li>
           <li>Bestätigungsmail, dass Bestellung eingegangen ist</li> Mit der Zusendung der Bestellbestätigung kommt der Vertrag
           zustande.
-          <h2>Vertragsdauer</h2>Der Vertrag hat wiederkehrende/dauernde Leistungen zum Gegenstand. Der Vertrag wird auf unbestimmte
+          <br>
+          <br>
+          <br>
+          <h4>Vertragsdauer</h4>Der Vertrag hat wiederkehrende/dauernde Leistungen zum Gegenstand. Der Vertrag wird auf unbestimmte
           Zeit geschlossen. Jede Vertragspartei hat das Recht den Vertrag mit einer Frist von 1 Monate zum Monatsende ohne
           Angabe von Gründen zu kündigen. Das Recht auf außerordentliche Kündigung aus wichtigem Grund, insbesondere dem
           wiederholten Verstoß gegen die vertraglichen Hauptpflichten bleibt unberührt. Die Kündigung ist nur wirksam, wenn
           sie in folgender Form erfolgt: Elektronisch/E-Mail.
-          <h2>Preise, Versandkosten, Rücksendekosten</h2>Alle Preise sind Endpreise und enthalten die gesetzliche Umsatzsteuer.
+          <br>
+          <br>
+          <br>
+          <h4>Preise, Versandkosten, Rücksendekosten</h4>Alle Preise sind Endpreise und enthalten die gesetzliche Umsatzsteuer.
           Pro Bestellung fallen einmalig folgende Versandkostenpauschalen an: Deutschland: € 5 EU: € 10 International: €
           15. Bei Teillieferungen fällt die Pauschale jeweils nur einmal an. Für den Versand fallen keine weiteren Kosten
           an. Dies gilt ab einem Betrag von € . Besteht ein Widerrufsrecht und wird von diesem Gebraucht gemacht, trägt der
           Kunde die Kosten der Rücksendung.
-          <h2>Zahlungsbedingungen</h2>Der Kunde hat ausschließlich folgende Möglichkeiten zur Zahlung: Lastschrifteinzug, Zahlungsdienstleister
+          <br>
+          <br>
+          <br>
+          <h4>Zahlungsbedingungen</h4>Der Kunde hat ausschließlich folgende Möglichkeiten zur Zahlung: Lastschrifteinzug, Zahlungsdienstleister
           (PayPal), Kreditkarte. Weitere Zahlungsarten werden nicht angeboten und werden zurückgewiesen.
           <br /> Der Rechnungsbetrag wird vom Anbieter mittels Lastschriftverfahren auf Grundlage der Einzugsermächtigung durch
           den Kunden von dessen angegebenem Konto eingezogen. Bei Verwendung eines Treuhandservice/ Zahlungsdienstleisters
@@ -56,13 +73,22 @@
           innerhalb von 14 Tagen nach Erhalt der Rechnung den ausgewiesenen Betrag auf das auf der Rechnung angegebene Konto
           einzuzahlen oder zu überweisen. Die Zahlung ist ab Rechnungsdatum ohne Abzug fällig. Der Kunde kommt erst nach
           Mahnung in Verzug.
-          <h2>Lieferbedingungen</h2>Die Ware wird umgehend nach bestätigtem Zahlungseingang versandt. Der Versand erfolgt durchschnittlich
+          <br>
+          <br>
+          <br>
+          <h4>Lieferbedingungen</h4>Die Ware wird umgehend nach bestätigtem Zahlungseingang versandt. Der Versand erfolgt durchschnittlich
           spätestens nach 2 Tagen. Der Unternehmer verpflichtet sich zur Lieferung am 7 Tag nach Bestelleingang. Die Regellieferzeit
           beträgt 4 Tage, wenn in der Artikelbeschreibung nichts anderes angegeben ist. Der Anbieter versendet nicht direkt.
           Die Bestellung wird vom Hersteller verschickt, sobald die gesamte Bestellung dort vorrätig ist. Der Kunde wird
           über Verzögerungen umgehend informiert.
-          <h2>Vertragsgestaltung</h2>Der Kunde hat keine Möglichkeit selbst direkt auf den gespeicherten Vertragstext zuzugreifen.
-          <h2>Widerrufsrecht und Kundendienst</h2>
+          <br>
+          <br>
+          <br>
+          <h4>Vertragsgestaltung</h4>Der Kunde hat keine Möglichkeit selbst direkt auf den gespeicherten Vertragstext zuzugreifen.
+          <br>
+          <br>
+          <br>
+          <h4>Widerrufsrecht und Kundendienst</h4>
 
 
 
@@ -123,7 +149,8 @@
           <br /> Ende der Widerrufsbelehrung
           <br />
           <br />
-          <h2>Sprache, Gerichtsstand und anzuwendendes Recht</h2>Der Vertrag wird in Deutsch abgefasst. Die weitere Durchführung
+          <br>
+          <h4>Sprache, Gerichtsstand und anzuwendendes Recht</h4>Der Vertrag wird in Deutsch abgefasst. Die weitere Durchführung
           der Vertragsbeziehung erfolgt in Deutsch. Es findet ausschließlich das Recht der Bundesrepublik Deutschland Anwendung.
           Für Verbraucher gilt dies nur insoweit, als dadurch keine gesetzlichen Bestimmungen des Staates eingeschränkt werden,
           in dem der Kunde seinen Wohnsitz oder gewöhnlichen Aufenthalt hat. Gerichtsstand ist bei Streitigkeiten mit Kunden,
