--- a/src/app/pages/shopping-cart/shopping-cart.component.scss
+++ b/src/app/pages/shopping-cart/shopping-cart.component.scss
@@ -33,3 +33,7 @@
 .vertical-mid {
   vertical-align: middle;
 }
+
+.table-primary, .table-primary > th, .table-primary > td {
+  background-color: #3f51b5;
+}
