--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -14,17 +14,17 @@
     <div class="row no-gutters justify-content-start" style="align-items: center">
 
       <div class="col-3">
-        <a class="btn btn-indigo darken-2 waves-light" id="button_select_all_pictures" (click)="selectAllImages()" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
+        <a class="btn btn-pink darken-2 waves-light" id="button_select_all_pictures" (click)="selectAllImages()" mdbRippleRadius>{{ 'BUTTONS.SELECT_PICTURES' | translate }}</a>
       </div>
 
       <div class="col-1 offset-md-8">
         <a class="icon-button lessVertical" id="button_two_pictures_per_row" (click)="this.templateOverview = this.imgBigOverview"
-          style="color: #3f51b5">
+          style="color: #e91e63 ">
           <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
         </a>
         &nbsp;&nbsp;
         <a class="icon-button lessVertical" id="button_three_pictures_per_row" (click)="this.templateOverview = this.imgSmalOverview"
-          style="color: #3f51b5">
+          style="color: #e91e63">
           <i class="fa fa-th fa-2x" aria-hidden="true"></i>
         </a>
       </div>
@@ -41,15 +41,15 @@
     <div class="row no-gutters justify-content-start" style="align-items: center">
 
       <div class="col-3">
-        <a class="btn btn-indigo darken-2 waves-light" id="button_deselect_all_pictures" (click)="deselectAllImages()" mdbRippleRadius>{{ 'BUTTONS.DESELECT_PICTURES' | translate }}</a>
+        <a class="btn btn-pink darken-2 waves-light" id="button_deselect_all_pictures" (click)="deselectAllImages()" mdbRippleRadius>{{ 'BUTTONS.DESELECT_PICTURES' | translate }}</a>
       </div>
       <div class="col-1 offset-md-8">
-        <a class="icon-button lessVertical" id="button_two_pictures_per_row" (click)="this.templateMarked = this.imgBigMarked" style="color: #3f51b5">
+        <a class="icon-button lessVertical" id="button_two_pictures_per_row" (click)="this.templateMarked = this.imgBigMarked" style="color: #e91e63 ">
           <i class="fa fa-th-large fa-2x" aria-hidden="true"></i>
         </a>
         &nbsp;&nbsp;
         <a class="icon-button lessVertical" id="button_three_pictures_per_row" (click)="this.templateMarked = this.imgSmalMarked"
-          style="color: #3f51b5">
+          style="color: #e91e63 ">
           <i class="fa fa-th fa-2x" aria-hidden="true"></i>
         </a>
       </div>
