--- a/src/app/pages/event-search-page/event-search-page.component.html
+++ b/src/app/pages/event-search-page/event-search-page.component.html
@@ -1,6 +1,8 @@
 <div>
   <div class="row mt-5 pt-5 justify-content-md-center input-row">
     <div class="col col-lg-6">
+      <br>
+      <br>
       <div class="md-form">
         <input mdbActive type="text" class="form-control" (keyup)="onKey($event)">
         <label class="active">{{ 'TEXTS.SEARCH_EVENT' | translate }}</label>
@@ -10,10 +12,10 @@
   </div>
   <div *ngIf="searchedEvents">
     <div class="row">
-      <div *ngFor="let event of searchedEvents" class="col-12 col-md-4">
+      <div *ngFor="let event of searchedEvents" class="col-12 col-md-4" style="margin-bottom: 30px">
         <div class="card card-cascade wider">
 
-          <div class="view gradient-card-header peach-gradient">
+          <div class="view gradient-card-header indigo-gradient">
             <h2 class="h2-responsive mb-2">
               <i *ngIf="!event?.public" class="fa fa-lock"></i> {{event.name}}</h2>
             <p>
@@ -24,7 +26,7 @@
 
             <p class="card-text mr-2 ml-2">{{event.description}}</p>
 
-            <a [routerLink]="[ '/event', event.id]" class="orange-text mt-1 d-flex flex-row-reverse">
+            <a [routerLink]="[ '/event', event.id]" class="pink-text mt-1 d-flex flex-row-reverse">
               <h5 class="waves-effect p-2" mdbRippleRadius>View Pictures
                 <i class="fa fa-chevron-right"></i>
               </h5>
