--- a/src/app/pages/photographer-page/photographer-page.component.scss
+++ b/src/app/pages/photographer-page/photographer-page.component.scss
@@ -30,3 +30,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.indigo-gradient {
+  background: linear-gradient(80deg, #9dafff, rgb(104, 129, 253));
+}
