--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -35,20 +35,20 @@
           </td>
           <td class="vertical-mid">{{cartItem.info.width}}x{{cartItem.info.height}}</td>
           <td class="vertical-mid">
-            <i *ngIf="cartItem.itemType === checkType.PRINT" class="fa fa-chevron-left fa-lg clickable pl-2 pr-2" aria-hidden="true"
+            <i *ngIf="cartItem.itemType === checkType.PRINT" class="fa fa-chevron-left fa-lg clickable pl-2 pr-2" style="color: #e91e63"aria-hidden="true"
               (click)="decreaseQuantity(cartItem)"></i>
             <span>{{cartItem.amount}}</span>
-            <i *ngIf="cartItem.itemType === checkType.PRINT" class="fa fa-chevron-right fa-lg clickable pl-2 pr-2" aria-hidden="true"
+            <i *ngIf="cartItem.itemType === checkType.PRINT" class="fa fa-chevron-right fa-lg clickable pl-2 pr-2" style="color: #e91e63" aria-hidden="true"
               (click)="increaseQuantity(cartItem)"></i>
           </td>
           <td class="vertical-mid">{{cartItem.totalPrice | number:'0.2-2' | replace:'.':','}}€</td>
           <td class="vertical-mid">
-            <i class="fa fa-2x fa-trash clickable clickeffect" aria-hidden="true" (click)="deleteCartItem(i)"></i>
+            <i class="fa fa-2x fa-trash clickable clickeffect" style="color: #e91e63" aria-hidden="true" (click)="deleteCartItem(i)"></i>
           </td>
         </tr>
         <!-- END dynamic table row -->
         <!-- Sum row -->
-        <tr class="table-primary">
+        <tr class="table-primary" style="background-color: indigo; color: white">
           <td></td>
           <td></td>
           <td></td>
@@ -62,7 +62,7 @@
     <!-- Buttons to previous or next step -->
     <div class="row justify-content-end">
       <button type="button" class="btn pink waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
-      <button type="button" class="btn pink waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
+      <button type="button" class="btn pink waves-light col-sm-3" routerLink="/checkout" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
     </div>
     <!-- END buttons -->
   </div>
