fix build errors

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 
   <div class="footer-copyright">
     <div class="container-fluid">Made with
-      <i class="fa fa-heart" styl="color: red" aria-hidden="true"></i>
+      <i class="fa fa-heart" style="color: red" aria-hidden="true"></i>
       © {{ year }} Copyright:
       <a routerLink="/"> eventpicking.de </a>
       &nbsp;|&nbsp;
@@ -13,12 +13,4 @@
       <a routerLink="/gtc">{{ 'LABELS.GTC' | translate }}</a>
     </div>
   </div>
-        <div class="col-2">
-          <a routerLink="/imprint"> Impressum </a>
-          <a> | </a>
-          <a routerLink="/data-protection"> Datenschutz </a>
-        </div><!--col-->
-      </div><!--row-->
-    </div><!--container-->
-  </div><!--copyright-->
 </footer>
