Search Event by ID

--- a/src/app/pages/event-search-page/event-search-page.component.scss
+++ b/src/app/pages/event-search-page/event-search-page.component.scss
@@ -3,12 +3,21 @@
   padding: 30px;
 }
 
+.btn-primary {
+  width: 200px;
+  height: 50px;
+}
+
 .input-row {
   padding-bottom: 50px;
 }
 
 .col-12 {
   padding-bottom: 30px;
+}
+
+.col-lg-6 {
+  text-align: center;
 }
 
 .indigo-gradient {
