--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -68,7 +68,8 @@
   <div class="row">
     <div *ngFor="let image of images; let i = index" class="col-4">
       <div class="card card-outline-primary z-depth-1">
-        <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image, i)">
+        <img class="img-fluid" [defaultImage]="'https://www.scandichotels.de/Static/img/placeholders/image-placeholder_3x2.svg'"
+          [lazyLoad]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image, i)">
         <div class="card-body">
           <p>{{image.name}}</p>
           <table>
@@ -102,23 +103,24 @@
 </ng-template>
 
 <ng-template #imgSmalOverview>
-  <img *ngFor="let image of images; let i = index" class="img-fluid" [src]="image.thumbnail" width="250" height="150" [alt]="image.name"
-    div class="box1" (click)="openImageModal(image)">
+  <img *ngFor="let image of images; let i = index" class="img-fluid" [defaultImage]="'https://www.scandichotels.de/Static/img/placeholders/image-placeholder_3x2.svg'"
+    [lazyLoad]="image.thumbnail" width="250" height="150" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
 </ng-template>
 
 <ng-template #imgBigMarked>
   <div class="card-columns">
     <div *ngFor="let image of images; let i = index">
       <div class="card card-outline-primary z-depth-1" *ngIf="image.selected">
-        <img class="img-fluid" [src]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
+        <img class="img-fluid" [defaultImage]="'https://www.scandichotels.de/Static/img/placeholders/image-placeholder_3x2.svg'"
+          [lazyLoad]="image.thumbnail" width="328" height="250" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
       </div>
     </div>
   </div>
 </ng-template>
 <ng-template #imgSmalMarked>
   <div *ngFor="let image of images; let i = index">
-    <img class="img-fluid" *ngIf="image.selected" [src]="image.thumbnail" width="250" height="150" [alt]="image.name" div class="box1"
-      (click)="openImageModal(image)">
+    <img class="img-fluid" *ngIf="image.selected" [defaultImage]="'https://www.scandichotels.de/Static/img/placeholders/image-placeholder_3x2.svg'"
+      [lazyLoad]="image.thumbnail" width="250" height="150" [alt]="image.name" div class="box1" (click)="openImageModal(image)">
   </div>
 </ng-template>
 
