--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -58,7 +58,8 @@
                         <div class="gal">
 
                             <div class="subtitle" *ngFor="let image of (images | async)">
-                                <img [src]="image.thumbnail" [alt]="image.name" [routerLink]="['/event', image.event]">
+                                <img [defaultImage]="'https://www.scandichotels.de/Static/img/placeholders/image-placeholder_3x2.svg'" [lazyLoad]="image.thumbnail"
+                                    [alt]="image.name" [routerLink]="['/event', image.event]">
                                 <span>
                                     <i class="fa fa-heart" aria-hidden="true"> {{ image.ratings }}</i>
                                 </span>
