--- a/src/app/pages/payment-success-page/payment-success-page.component.html
+++ b/src/app/pages/payment-success-page/payment-success-page.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-5 pt-5">
   <div class="col text-center">
-    <h1>Payment Successfull!</h1>
+    <h1>{{ 'TEXTS.PAYMENT_SUCCESSFULL' | translate }}</h1>
   </div>
 </div>
