--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -3,6 +3,9 @@
   <div class="card-body">
     <h4 class="card-title">{{ event?.date }} - {{event?.location }}</h4>
     <p class="card-text">{{ event?.description }}</p>
+    <a routerLink="/photographer/{{photographer?.profileUrl}}">
+      <p>{{ 'TEXTS.VISIT_PHOTOGRAPHERS_PAGE' | translate }}</p>
+    </a>
   </div>
 </div>
 
